build: lower the Java baseline to 17 (#25)
Lower the source and bytecode baseline and default Java toolchain from Java 21 to Java 17. Add Java 17 to the compatibility matrix and release checks while retaining Java 21 and 25 coverage.

Keep virtual-thread coverage on Java 21 and later, replace newer JDK APIs with Java 17-compatible equivalents, and verify published artifact consumption on the Java 17 baseline.

Use explicit ASCII boundaries for the sample regex rules so behavior stays consistent across supported JDKs. Align the evaluation corpus and synchronized English and Korean documentation with the new baseline.

Closes #24

Signed-off-by: Taewoong Kim <ktw2172@gmail.com>